tests/fixtures/invalid/str_ge_set.py
# Cannot compare with >= Str and Set[int]
x: bool = "hello" >= {1, 2, 3}
